# image-transform

./: .gitignore  AGENT.md  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
electron/: main.ts  tsconfig.json
release/: Image Transform Studio Setup 0.0.0.exe.blockmap  Image Transform Studio-0.0.0-arm64.dmg.blockmap  builder-debug.yml  latest-mac.yml  latest.yml
release/win-arm64-unpacked/resources/: app-update.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/features/free-transform/: index.ts
src/features/free-transform/hooks/: useTransform.ts
src/features/free-transform/ui/: TransformControls.tsx  TransformModeSelector.tsx
src/features/image-upload/: index.ts
src/features/image-upload/ui/: ImageList.tsx  ImageUploader.tsx
src/pages/content-generator/: ContentGeneratorPage.tsx  index.ts
src/pages/home/: HomePage.tsx
src/pages/image-processor/: ImageProcessorPage.tsx  index.ts
src/pages/image-split/: ImageSplitPage.tsx  index.ts
src/shared/config/: image.ts  theme.ts
src/shared/stores/: atoms.ts
src/shared/types/: _image.ts  index.ts
src/shared/ui/Button/: Button.tsx
src/shared/ui/Card/: Card.tsx
src/shared/utils/: _format.ts  _opencv.ts  crop.ts  download.ts  frame.ts  index.ts  split.ts  zipDownload.ts
src/widgets/content-generator/: ContentGenerator.tsx  index.ts
src/widgets/image-processor/: ImageProcessor.old.tsx  ImageProcessor.tsx  index.ts
src/widgets/image-processor/components/: CanvasSection.tsx  index.ts  (+17 more)
