[package]
name = "image-transform"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1", features = ["custom-protocol", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
